Improve Job wrapping to use an adaptor and strategies.